<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/featuresName">
        <menu>
            <item
                android:id="@+id/navigationview_networkscanner_button"
                android:title="@string/networkScannerName"/>
            <item
                android:id="@+id/navigationview_portscanner_button"
                android:title="@string/portScannerName"/>
        </menu>
    </item>

    <group>
        <item
            android:id="@+id/navigationview_settings_button"
            android:icon="@drawable/ic_outline_settings_24"
            android:title="@string/menuSettings"/>
        <item
            android:id="@+id/navigationview_home_button"
            android:icon="@drawable/ic_outline_home_24"
            android:title="@string/homeName"/>
    </group>

</menu>